# RealTimeRaytracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  run_app.sh  run_tests.sh
dep/: CMakeLists.txt
dep/glad/src/: gl.c
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  errorHandler.hpp  input.cpp
src/core/: CMakeLists.txt  input.cpp  input.hpp
src/dep/: CMakeLists.txt
src/dep/glad/include/glad/: gl.h
src/dep/imgui/: gui.cpp
src/scene/: CMakeLists.txt  camera.cpp  scene.cpp  scene.hpp
src/scene/geometry/: CMakeLists.txt  bvh.cpp  bvh.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
src/scene/pbr/: CMakeLists.txt  material.cpp  material.hpp
src/shaders/: CMakeLists.txt  program.cpp  program.hpp  shader.cpp
src/shaders/shaderCodes/: raytracer.frag  raytracer.glsl  raytracer.vert
src/shaders/shaderCodes/ploc/preprocessing/sort/: exclusivePrefixSum.glsl  histogramOfGlobalDigitCounts.glsl  prefixSumOfGlobalDigitCounts.glsl
srcCommon/: CMakeLists.txt
srcCommon/core/: CMakeLists.txt  errorHandler.cpp  errorHandler.hpp  input.cpp  input.hpp
srcCommon/scene/: CMakeLists.txt  camera.cpp  camera.hpp
srcCommon/scene/geometry/: CMakeLists.txt  bvh.cpp  bvh.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
srcCommon/scene/pbr/: CMakeLists.txt  material.cpp  material.hpp
srcCommon/shaders/: raytracer.frag
srcCommon/shaders/compiled/: gradient.slang
srcOpenGL/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
srcOpenGL/core/: CMakeLists.txt  errorHandler.cpp  errorHandler.hpp  input.cpp  input.hpp
srcOpenGL/dep/: CMakeLists.txt
srcOpenGL/dep/imgui/: gui.hpp
srcOpenGL/scene/: CMakeLists.txt  camera.cpp  camera.hpp  scene.cpp  scene.hpp
srcOpenGL/scene/geometry/: CMakeLists.txt  bvh.cpp  bvh.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
srcOpenGL/scene/pbr/: CMakeLists.txt  material.cpp  material.hpp
srcOpenGL/shaders/: CMakeLists.txt  program.cpp  program.hpp  shader.cpp  shader.hpp
srcVulkan/: CMakeLists.txt  application.cpp  application.hpp  glfwInit.cpp  main.cpp  vulkanInit.cpp
srcVulkan/dep/: CMakeLists.txt
srcVulkan/pipelines/: CMakeLists.txt  gradientPipeline.cpp  gradientPipeline.hpp  pipeline.cpp  pipeline.hpp  vkPipelines.cpp
srcVulkan/vulkan/: CMakeLists.txt  vkCommands.cpp  vkDescriptors.cpp  vkDevice.cpp  vkGraphicsQueue.cpp  vkHelpers.cpp  vkImageView.cpp  vkInit.cpp  vkInstance.cpp  vkMemoryAllocator.cpp  vkPhysicalDevice.cpp  vkPipelines.cpp  vkSlang.cpp  vkSurface.cpp  vkSwapChain.cpp  vkSyncStructures.cpp
tests/: CMakeLists.txt  basic.cpp  testSort.cpp
tests/testSortGPU/: testHistogramCreation.cpp  testHistogramCreationHard.cpp  testHistogramPrefixSum.cpp
tests/testsSortGPU/: testHistogramCreationHard.cpp
